# mtpsync

./: AUTHORS  Makefile.in  ProjectHome.md  config.h.in  configure  configure.in  mtpsync.glade  mtpsync.gladep
src/: Makefile.in  callbacks.c  id3read.h  interface.h  main.c  main.h
trunk/: Makefile.am  Makefile.in  config.h.in  configure  configure.in
trunk/autom4te.cache/: traces.0t
trunk/src/: Makefile.am  Makefile.in  callbacks.h  id3read.c  interface.c  main.c
