dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(mtpsync, 0.6)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_CHECK_LIB(readline)
AC_CHECK_HEADER(readline/readline.h)
AC_CHECK_LIB(ncurses)
AC_CHECK_HEADER(ncurses.h)

PKG_CHECK_MODULES(PACKAGE, gtk+-2.0 >= 2.0.0 \
                           gconf-2.0 >= 2.0.0 \
                           mad >= 0.15 \
                           libusb \
                           id3tag >= 0.15)
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

PKG_CHECK_MODULES(MTP, libmtp)
AC_SUBST(MTP_CFLAGS)
AC_SUBST(MTP_LIBS)

GETTEXT_PACKAGE=mtpsync
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package.])

dnl Add the languages which your application supports here.
ALL_LINGUAS=""
AM_GLIB_GNU_GETTEXT

AC_OUTPUT([
Makefile
src/Makefile
po/Makefile.in
])

